# vision-robot-arm

./: LICENSE.txt  README.md  pyproject.toml
src/Test/: classificationTest.py  fireTest.py  servoTest.py
src/esp32/: classificate2.ino  esp32.ino
src/vision_robot_arm/: __init__.py  app.py  credentials.json  functions.py  rasp.py  test.py  web1.py
src/web/: app.py  fireTest.py
src/web/templates/: index.html
