[project]
name = "vision-robot-arm"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Joshua Cobos", email = "josalcob@espol.edu.ec" }
]
dependencies = [
    "pandas>=2.0.3",
    "opencv-python>=4.8.1.78",
    "imutils>=0.5.4",
    "opencv-contrib-python>=4.8.1.78",
    "requests>=2.31.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
# These three options are equivalent:
dev = "python ./src/vision_robot_arm/__init__.py"
test = "python ./src/vision_robot_arm/test.py"
