[project]
name = "vision-robot-arm"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Joshua Cobos", email = "josalcob@espol.edu.ec" }
]
dependencies = [
    "pandas>=2.0.3",
    "opencv-python>=4.8.1.78",
    "imutils>=0.5.4",
    "opencv-contrib-python>=4.8.1.78",
    "requests>=2.31.0",
    "pyModbusTCP>=0.2.0",
    "matplotlib>=3.7.4",
    "pyserial>=3.5",
    "imtools>=2.0.1",
    "numpy>=1.24.4",
    "Pillow>=10.1.0",
    "flask>=3.0.0",
    "firebase_admin>=6.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
# These three options are equivalent:
dev = "python ./src/vision_robot_arm/app.py"
test = "python ./src/vision_robot_arm/test.py"
